some changes in home-1

--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle nva-manu-item"
+                class="nav-link dropdown-toggle nav-hover"
                 href="services.html"
                 id="navbarDropdown"
                 role="button"
@@ -28,23 +28,21 @@
               >
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="/">Home </a>
+                  <a class="dropdown-item -sub nav-hover" href="/">Home </a>
                 </li>
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="homev2.html"
+                  <a class="dropdown-item -sub nav-hover" href="homev2.html"
                     >Home V2</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="/"
-                    >Home V3</a
-                  >
+                  <a class="dropdown-item -sub nav-hover" href="/">Home V3</a>
                 </li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle nva-manu-item"
+                class="nav-link dropdown-toggle nav-hover"
                 href="services.html"
                 id="navbarDropdown"
                 role="button"
@@ -54,26 +52,22 @@
               >
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="ourteam.html"
+                  <a class="dropdown-item -sub nav-hover" href="ourteam.html"
                     >Our Team</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="aboutus.html"
+                  <a class="dropdown-item -sub nav-hover" href="aboutus.html"
                     >About Us</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item nva-manu-item-sub"
-                    href="contactus.html"
+                  <a class="dropdown-item -sub nav-hover" href="contactus.html"
                     >Contact Us</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item nva-manu-item-sub"
-                    href="ourclients.html"
+                  <a class="dropdown-item -sub nav-hover" href="ourclients.html"
                     >Our Clients</a
                   >
                 </li>
@@ -81,7 +75,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle nva-manu-item"
+                class="nav-link dropdown-toggle nav-hover"
                 href="services.html"
                 id="navbarDropdown"
                 role="button"
@@ -91,14 +85,12 @@
               >
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a
-                    class="dropdown-item nva-manu-item-sub"
-                    href="services.html"
+                  <a class="dropdown-item -sub nav-hover" href="services.html"
                     >Services 1</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="404.html"
+                  <a class="dropdown-item -sub nav-hover" href="404.html"
                     >404 Error</a
                   >
                 </li>
@@ -106,7 +98,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle nva-manu-item"
+                class="nav-link dropdown-toggle nav-hover"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -117,7 +109,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
                   <a
-                    class="dropdown-item nva-manu-item-sub"
+                    class="dropdown-item -sub nav-hover"
                     href="PracticeArea.html"
                     >Practice Area-1</a
                   >
@@ -126,7 +118,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle nva-manu-item"
+                class="nav-link dropdown-toggle nav-hover"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -136,12 +128,12 @@
               >
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="event.html"
+                  <a class="dropdown-item -sub nav-hover" href="event.html"
                     >Event-1</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item nva-manu-item-sub" href="blog.html"
+                  <a class="dropdown-item -sub nav-hover" href="blog.html"
                     >Blog</a
                   >
                 </li>
