--- a/homev2.html
+++ b/homev2.html
@@ -47,7 +47,7 @@
         <div class="left-img col-7 image-fit background-dark"></div>
         <div class="right-desc col-5">
           <div class="main-info-card">
-            <div class="des-box">
+            <div>
               <p class="info-box-text-1">We Know</p>
               <p class="info-box-text-2">How to Protect</p>
               <p class="info-box-description">
