--- a/header.html
+++ b/header.html
@@ -67,6 +67,11 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item -sub nav-hover" href="contactus2.html"
+                    >Contact Us 2</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item -sub nav-hover" href="ourclients.html"
                     >Our Clients</a
                   >
