icon path change in index

--- a/header.html
+++ b/header.html
@@ -95,6 +95,11 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item -sub nav-hover" href="service2.html"
+                    >Services 2</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item -sub nav-hover" href="404.html"
                     >404 Error</a
                   >
