--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="main-image">
                 <img
                   class="home-image-1"
-                  src="/images/Home image 1.jpg"
+                  src="images/Home image 1.jpg"
                   alt="home-image-1"
                 />
               </div>
@@ -89,7 +89,7 @@
                   <div class="sub-1">
                     <div class="icon-head">
                       <div class="icon-box">
-                        <img src="/icon/icons8-flow-chart-50.png" alt="" />
+                        <img src="icon/icons8-flow-chart-50.png" alt="" />
                       </div>
                     </div>
                     <div class="text-box">
@@ -107,7 +107,7 @@
                   <div class="sub-1">
                     <div class="icon-head">
                       <div class="icon-box">
-                        <img src="/icon/idea .png" alt="idea-sharing" />
+                        <img src="icon/idea .png" alt="idea-sharing" />
                       </div>
                     </div>
                     <div class="text-box">
@@ -125,7 +125,7 @@
                   <div class="sub-1">
                     <div class="icon-head">
                       <div class="icon-box">
-                        <img src="/icon/support.png" alt="idea-sharing" />
+                        <img src="icon/support.png" alt="idea-sharing" />
                       </div>
                     </div>
                     <div class="text-box">
@@ -143,7 +143,10 @@
                   <div class="sub-1">
                     <div class="icon-head">
                       <div class="icon-box">
-                        <img src="/icon/idea .png" alt="idea-sharing" />
+                        <img
+                          src="icon/icons8-end-call-female-50.png"
+                          alt="idea-sharing"
+                        />
                       </div>
                     </div>
                     <div class="text-box">
