--- a/index.html
+++ b/index.html
@@ -328,49 +328,49 @@
           <div class="faci-box-menu">
             <div class="boxes-a box-mar">
               <div class="icon-space">
-                <img src="/icon/Place Marker.png" alt="facility-icon" />
+                <img src="icon/Place Marker.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Our Address</p>
             </div>
             <div class="boxes-a box-mar">
               <div class="icon-space">
-                <img src="/icon/protect.png" alt="facility-icon" />
+                <img src="icon/protect.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Insurance Law</p>
             </div>
             <div class="boxes-a box-mar">
               <div class="icon-space">
-                <img src="/icon/bully-50.png" alt="facility-icon" />
+                <img src="icon/bully-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Violence Law</p>
             </div>
             <div class="boxes-a box-mar">
               <div class="icon-space">
-                <img src="/icon/online-shopping-50.png" alt="facility-icon" />
+                <img src="icon/online-shopping-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Ecommerce Law</p>
             </div>
             <div class="boxes-a">
               <div class="icon-space">
-                <img src="/icon/meeting-room-50.png" alt="facility-icon" />
+                <img src="icon/meeting-room-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Corporate Law</p>
             </div>
             <div class="boxes-a">
               <div class="icon-space">
-                <img src="/icon/rent-50.png" alt="facility-icon" />
+                <img src="icon/rent-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Real Estate Law</p>
             </div>
             <div class="boxes-a">
               <div class="icon-space">
-                <img src="/icon/resume-50.png" alt="facility-icon" />
+                <img src="icon/resume-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Employment Law</p>
             </div>
             <div class="boxes-a">
               <div class="icon-space">
-                <img src="/icon/guardian-50.png" alt="facility-icon" />
+                <img src="icon/guardian-50.png" alt="facility-icon" />
               </div>
               <p class="faci-text">Family Law</p>
             </div>
