new changes on 12jully

--- a/homev2.html
+++ b/homev2.html
@@ -28,7 +28,7 @@
         <div class="col-12 flex-column hero-section">
           <div class="Maintitle">
             <p class="title">Oscorp</p>
-            <p class="title1">Atorny</p>
+            <p class="title1">Attorny</p>
           </div>
           <div class="under-line"></div>
           <div class="description mt-4">
