--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Oscorp</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/images/" /> -->
+    <link rel="icon" type="image/x-icon" href="icon/law-30.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,7 +36,7 @@
             <div class="col-12 flex-column hero-section">
               <div class="Maintitle">
                 <p class="title">Oscorp</p>
-                <p class="title1">Atorny</p>
+                <p class="title1">Attorny</p>
               </div>
               <div class="under-line"></div>
               <div class="description mt-4">
