--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <section class="main-container bg-light">
     <nav class="navbar navbar-expand-lg navbar-light main-container-header">
       <div class="container-fluid">
-        <a class="navbar-brand logo" href="#">Oscorp</a>
+        <a class="navbar-brand logo" href="index.html">Oscorp</a>
         <button
           class="navbar-toggler"
           type="button"
