--- a/ourteam.html
+++ b/ourteam.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>our Team</title>
+    <link rel="icon" type="image/x-icon" href="icon/law-30.png" />
+    <link rel="icon" type="image/x-icon" href="icon/law-30.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,7 +56,7 @@
       <section class="container-fluid sec-2-team p-5">
         <div class="our-info container">
           <div class="row">
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
@@ -67,7 +69,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
@@ -80,7 +82,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
@@ -93,7 +95,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
@@ -106,7 +108,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
@@ -119,7 +121,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 p-2">
+            <div class="col-md-6 col-lg-4 p-2">
               <div class="card p-0">
                 <img
                   class="w-100"
