--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,7 @@
           </div>
         </div>
       </section>
-      <section class="about-sec-4 mt-5 mb-5">
+      <section class="about-sec-4 mb-5">
         <div class="team-data row ms-3 mb-5">
           <div class="team-title col-7 mt-3">
             <p class="orane-text-30">Our Team</p>
@@ -126,37 +126,31 @@
             </div>
           </div>
         </div>
-        <div class="team-profile row mt-5">
-          <div
-            class="col mysub d-flex align-items-center justify-content-center"
-          >
+        <div
+          class="team-profile row row-cols-md-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5"
+        >
+          <div class="col mysub">
             <div class="profile-box img-1 image-fit box-shadow"></div>
             <div class="text-info box-shadow">
               <p class="name-1 text-center pt-1 m-0">John Wick</p>
               <p class="text-center post-text">Civil Lawyer</p>
             </div>
           </div>
-          <div
-            class="col mysub d-flex align-items-center justify-content-center"
-          >
+          <div class="col mysub">
             <div class="profile-box img-2 image-fit box-shadow"></div>
             <div class="text-info box-shadow">
               <p class="name-1 text-center pt-1 m-0">Adam Gill</p>
               <p class="text-center post-text">Crime Lawyer</p>
             </div>
           </div>
-          <div
-            class="col mysub d-flex align-items-center justify-content-center"
-          >
+          <div class="col mysub">
             <div class="profile-box img-3 image-fit box-shadow"></div>
             <div class="text-info box-shadow">
               <p class="name-1 text-center pt-1 m-0">Lara Wills</p>
               <p class="text-center post-text">Civil Lawyer</p>
             </div>
           </div>
-          <div
-            class="col mysub d-flex align-items-center justify-content-center"
-          >
+          <div class="col mysub">
             <div class="profile-box img-4 image-fit box-shadow"></div>
             <div class="text-info box-shadow">
               <p class="name-1 text-center pt-1 m-0">Smith Doe</p>
