--- a/homev2.html
+++ b/homev2.html
@@ -149,54 +149,89 @@
             tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
           </p>
         </div>
-        <div class="faci-box-menu">
-          <div class="boxes-a box-mar">
-            <div class="icon-space">
-              <img src="/icon/Place Marker.png" alt="facility-icon" />
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4"
+        >
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/Place Marker.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Our Address</p>
+              </div>
             </div>
-            <p class="faci-text">Our Address</p>
           </div>
-          <div class="boxes-a box-mar">
-            <div class="icon-space">
-              <img src="/icon/protect.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/bully-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Violence Law</p>
+              </div>
             </div>
-            <p class="faci-text">Insurance Law</p>
           </div>
-          <div class="boxes-a box-mar">
-            <div class="icon-space">
-              <img src="/icon/bully-50.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/online-shopping-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Ecommerce Law</p>
+              </div>
             </div>
-            <p class="faci-text">Violence Law</p>
           </div>
-          <div class="boxes-a box-mar">
-            <div class="icon-space">
-              <img src="/icon/online-shopping-50.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/meeting-room-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Corporate Law</p>
+              </div>
             </div>
-            <p class="faci-text">Ecommerce Law</p>
           </div>
-          <div class="boxes-a">
-            <div class="icon-space">
-              <img src="/icon/meeting-room-50.png" alt="facility-icon" />
+
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/protect.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Insurance Law</p>
+              </div>
             </div>
-            <p class="faci-text">Corporate Law</p>
           </div>
-          <div class="boxes-a">
-            <div class="icon-space">
-              <img src="/icon/rent-50.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/rent-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Real Estate Law</p>
+              </div>
             </div>
-            <p class="faci-text">Real Estate Law</p>
           </div>
-          <div class="boxes-a">
-            <div class="icon-space">
-              <img src="/icon/resume-50.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/resume-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Employment Law</p>
+              </div>
             </div>
-            <p class="faci-text">Employment Law</p>
           </div>
-          <div class="boxes-a">
-            <div class="icon-space">
-              <img src="/icon/guardian-50.png" alt="facility-icon" />
+          <div class="col">
+            <div class="card h-100">
+              <div class="boxes-a">
+                <div class="icon-space">
+                  <img src="icon/guardian-50.png" alt="facility-icon" />
+                </div>
+                <p class="faci-text">Family Law</p>
+              </div>
             </div>
-            <p class="faci-text">Family Law</p>
           </div>
         </div>
       </div>
@@ -232,29 +267,31 @@
           </div>
         </div>
       </div>
-      <div class="team-profile row mt-5">
-        <div class="col mysub d-flex align-items-center justify-content-center">
+      <div
+        class="team-profile row row-cols-md-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5"
+      >
+        <div class="col mysub">
           <div class="profile-box img-1 image-fit box-shadow"></div>
           <div class="text-info box-shadow">
             <p class="name-1 text-center pt-1 m-0">John Wick</p>
             <p class="text-center post-text">Civil Lawyer</p>
           </div>
         </div>
-        <div class="col mysub d-flex align-items-center justify-content-center">
+        <div class="col mysub">
           <div class="profile-box img-2 image-fit box-shadow"></div>
           <div class="text-info box-shadow">
             <p class="name-1 text-center pt-1 m-0">Adam Gill</p>
             <p class="text-center post-text">Crime Lawyer</p>
           </div>
         </div>
-        <div class="col mysub d-flex align-items-center justify-content-center">
+        <div class="col mysub">
           <div class="profile-box img-3 image-fit box-shadow"></div>
           <div class="text-info box-shadow">
             <p class="name-1 text-center pt-1 m-0">Lara Wills</p>
             <p class="text-center post-text">Civil Lawyer</p>
           </div>
         </div>
-        <div class="col mysub d-flex align-items-center justify-content-center">
+        <div class="col mysub">
           <div class="profile-box img-4 image-fit box-shadow"></div>
           <div class="text-info box-shadow">
             <p class="name-1 text-center pt-1 m-0">Smith Doe</p>
