--- a/contactus.html
+++ b/contactus.html
@@ -83,10 +83,10 @@
           </p>
         </div>
         <div class="address-box row pt-3">
-          <div class="add-left col-6 image-fit background-dark"></div>
-          <div class="add-right-1 col-6">
+          <div class="add-left col-12 col-lg-6 image-fit background-dark"></div>
+          <div class="add-right-1 col-12 col-lg-6">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-6 mt-3 mt-lg-2">
                 <div class="card">
                   <div class="add-info-1 d-flex">
                     <div class="add-ic-left d-flex justify-content-center p-2">
@@ -99,8 +99,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6">
-                <div class="card mb-4">
+              <div class="col-sm-6 mt-3 mt-lg-2">
+                <div class="card">
                   <div class="add-info-1 d-flex">
                     <div class="add-ic-left d-flex justify-content-center p-2">
                       <img src="icon/icons8-clock-50.png" alt="" />
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-6 mt-3 mt-lg-2">
                 <div class="card">
                   <div class="add-info-2 d-flex">
                     <div class="add-ic-left d-flex justify-content-center p-2">
@@ -127,7 +127,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 mt-3 mt-lg-2">
                 <div class="card">
                   <div class="add-info-2 d-flex">
                     <div class="add-ic-left d-flex justify-content-center p-2">
